--- a/Simulations-InClass-Gately.Rmd
+++ b/Simulations-InClass-Gately.Rmd
@@ -6,7 +6,6 @@ date: "Due October 13, 2017 at 11:59pm"
 output:
   html_document
 
-
 ---
 
 <style type="text/css">
@@ -23,12 +22,7 @@ output:
 options(scipen = 3, digits = 3)
 ```
 
-
-
-
 #Project Goals:
-
-
 
 With this project we will simulate a famous probability problem. This will not require knowledge of probability or statistics but only the logic to follow the steps in order to simulate this problem. This is one way to solve problems by using the computer. 
 
@@ -36,21 +30,243 @@ With this project we will simulate a famous probability problem. This will not r
 Since you all have completed problem 1, you first step will be to work through each of your groupmates code for problem #1 and comment on what is happening. Then as a team move forward in on direction as you move on to the rest of the problems 2-5
 
  1. **Gambler's Ruin**: Suppose you have a bankroll of $1000 and make bets of $100 on a fair game. By simulating the outcome directly for at most 5000 iterations of the game (or hands), estimate:
+ 
     a. the probability that you have "busted" (lost all your money) by the time you have placed your one hundredth bet. 
-    b. the probability that you have busted by the time you have placed your five hundredth bet by simulating the outcome directly. 
-    c. the mean time you go bust, given that you go bust within the first 5000 hands.
-    d. the mean and variance of your bankroll after 100 hands (including busts).
-    e. the mean and variance of your bankroll after 500 hands (including busts).
+```{r}
+set.seed(1)
+gambler1=function(bet,bankroll,prob) {
+  b=0   #Hand=0
+  while(bet>0) {
+    ProbVal=runif(1) #generates a single normal random number
+    if(ProbVal <= prob) {
+      bankroll = bet + bankroll
+      bet = (bet + bankroll)*0.1
+    } else {
+      bankroll = bankroll-bet
+      bet = bet
+      }
+    b=b+1
+    if(bankroll < bet) {
+      break
+      }
+  }
+  duration = b
+  return(duration)
+}
+durations = numeric()
+s = 5000
+for(i in 1:s) {
+  dice = gambler1(100,900,0.5)
+  durations = c(durations,dice) #Creating a vector of durations and dice 
+}
+
+dur1=length(durations)
+bust1=length(which(durations<=100))
+bust1/dur1
+```
+The probability that you have "busted" by the time you placed your 100th bet is 0.12.
+
+  b. the probability that you have busted by the time you have placed your five hundredth bet by simulating the outcome directly. 
+    
+```{r}
+dur2=length(durations)
+bust2=length(which(durations<=500))
+bust2/dur2
+```
+The probability that you have "busted" by the time you placed your 500th bet is 0.477.
+
+  c. the mean time you go bust, given that you go bust within the first 5000 hands.
+
+```{r}
+mean_bust=durations[which(durations<=5000)]
+mean(mean_bust)
+```
+The mean time you go bust within the first 5000 hands is 758. 
+
+  d. the mean and variance of your bankroll after 100 hands (including busts).
+    
+```{r}
+set.seed(1)
+gambler2=function(bet,bankroll,prob) {
+  b=0
+  while(bet>0) {
+    ProbVal=runif(1)
+    if(ProbVal <= prob) {
+      bankroll = bet + bankroll
+      bet = (bet + bankroll)*0.1
+    } else {
+      bankroll = bankroll-bet
+      bet = bet
+      }
+    b=b+1
+    if(b ==100) {
+      break 
+      }
+    if(bankroll<bet){ 
+      break
+      }
+  }
+  duration = b
+  return(bankroll)
+}
+
+bankroll=numeric()
+s = 5000
+for(i in 1:s) {
+  dur3 = gambler2(100,900,0.5)
+  bankroll=c(bankroll,dur3)
+}
+
+mean(bankroll)
+var(bankroll)
+```
+The mean of the bankroll after 100 hands is 879 and the variance is 2716298. 
+
+  e. the mean and variance of your bankroll after 500 hands (including busts).
+    
+```{r}
+set.seed(1)
+gambler3=function(bet,bankroll,prob) {
+  b=0
+  while(bet>0) {
+    ProbVal=runif(1)
+    if(ProbVal <= prob) {
+      bankroll = bet + bankroll
+      bet = (bet + bankroll)*0.1
+    } else {
+      bankroll = bankroll-bet
+      bet = bet
+      }
+    b=b+1
+    if(b ==500) {
+      break
+      }
+    if(bankroll< bet) {
+      break
+      }
+  }
+  duration = b
+  return(bankroll)
+}
+
+bankroll=numeric()
+s = 5000
+for(i in 1:s)
+{
+  dur4 = gambler3(100,900,0.5)
+  bankroll=c(bankroll,dur4)
+}
+
+mean(bankroll)
+var(bankroll)
+```
+The mean of the bankroll after 500 hands is 536 and the variance is 19437196. 
+ 
  
 Note: you *must* stop playing if your player has gone bust. How will you handle this in the `for` loop?
 
 2. Repeat the previous problem with betting on black in American roulette, where the probability of winning on any spin is 18/38 for an even payout.
 
-3. **Markov Chains**. Suppose you have a game where the probability of winning on your first hand is 48%; each time you win, that probability goes up by one percentage point for the next game (to a maximum of 100%, where it must stay), and each time you lose, it goes back down to 48%. Assume you cannot go bust and that the size of your wager is a constant $100.
-    a. Is this a fair game? Simulate one hundred thousand sequential hands to determine the size of your return. Then repeat this simulation 99 more times to get a range of values to calculate the expectation.
-    b. Repeat this process but change the starting probability to a new value within 2% either way. Get the expected return after 100 repetitions. Keep exploring until you have a return value that is as fair as you can make it. Can you do this automatically?
-    c. Repeat again, keeping the initial probability at 48%, but this time change the probability increment to a value different from 1%. Get the expected return after 100 repetitions. Keep changing this value until you have a return value that is as fair as you can make it. 
 
+
+3. **Markov Chains**. Suppose you have a game where the probability of winning on your first hand is 48%; each time you win, that probability goes up by one percentage point for the next game (to a maximum of 100%, where it must stay), and each time you lose, it goes back down to 48%. Assume you cannot go bust and that the size of your wager is a constant $100.
+    
+    a. Is this a fair game? Simulate one hundred thousand sequential hands to determine the size of your return. Then repeat this simulation 99 more times to get a range of values to calculate the expectation.
+    
+```{r}
+set.seed(1)
+markov_chain=function(bet,bankroll,p) {
+  b=0  #hands=0 
+  prob<-p
+  while(bet>0) {
+    ProbVal=runif(1) #generates single normal random number
+    if(ProbVal <= p) {
+      bankroll = bankroll +bet  #defined as winning 
+      p = p+0.01 #prob increases if win 
+    } else {
+      bankroll = bankroll-bet #defined as losing 
+      p = prob #prob doesn't increase if lose
+    }
+    b=b+1
+    if(b==100000) { #Number of hands break when number of hands = 100,000 
+      break
+      }
+    if(bankroll < bet) { #if lost too much, it breaks 
+      break
+      }
+  }
+  return(bankroll)
+}
+
+size_return = numeric()
+s = 100
+for(i in 1:s)
+{
+  dur5 = markov_chain(100,900,0.48)
+  size = c(size_return,dur5)
+}
+mean(size_return) #Not fair is the mean size is 0 
+```
+
+  b. Repeat this process but change the starting probability to a new value within 2% either way. Get the expected return after 100 repetitions. Keep exploring until you have a return value that is as fair as you can make it. Can you do this automatically?
+    
+```{r}
+set.seed(1)
+proportion=numeric()
+for (j in 1:20) {
+  size=numeric()
+  s = 100
+for(i in 1:s) {
+  dur6 = markov_chain(100,900,0.46+0.002*j)
+  size_return = c(size_return,dur6)
+}
+  nextproportion=length(which(size==0))/100
+  proportion=c(proportion,nextproportion)
+}
+proportion
+``` 
+
+   c. Repeat again, keeping the initial probability at 48%, but this time change the probability increment to a value different from 1%. Get the expected return after 100 repetitions. Keep changing this value until you have a return value that is as fair as you can make it. 
+
+```{r}
+set.seed(1)
+markov_chain1=function(bet,bankroll,p,increment)
+{
+  b=0
+  prob<-p
+  while(bet>0) {
+    ProbVal=runif(1)
+    if(ProbVal <= p) {
+      bankroll = bankroll +bet
+      p = p+increment
+    } else {
+      bankroll = bankroll-bet
+      p = prob
+    }
+    b=b+1
+    if(b==100000) {
+      break
+      }
+    if(bankroll < bet) {
+      break
+      }
+  }
+  return(bankroll)
+}
+
+proportion = numeric()
+for (z in 1:20) {
+size=numeric()
+s = 100
+for(i in 1:s) {
+  dur7 = markov_chain1(100,900,0.48,0.002*z)
+  size_return = c(size_return,dur7)
+}
+nextproportion=length(which(size==0))/100
+proportion=c(proportion,nextproportion)
+}
+proportion
+```
 
 4. Creating a Bootstrap function. There is a particular concept called [bootstrapping]
 (https://en.wikipedia.org/wiki/Bootstrapping_(statistics)) where we can easily create 95% confidence intervals, even for complex estimators.
