--- a/Simulations-InClass - Childs.Rmd
+++ b/Simulations-InClass - Childs.Rmd
@@ -175,14 +175,127 @@ Note: you *must* stop playing if your player has gone bust. How will you handle 
 
 2. Repeat the previous problem with betting on black in American roulette, where the probability of winning on any spin is 18/38 for an even payout.
 
+```{r}
+set.seed(1)
+gambruin.2<-function(bets,bankroll,prob){
+  t=0                   #turns
+  while(bets>0) {       #while there are any bets
+    pval=runif(1)       #the probability value runs a normal random number
+    if(pval <= prob)    #if the probability value is less than or equal to the given 'prob' argument then run...
+    {
+      bankroll = bets + bankroll     
+      bets = (bets + bankroll)*0.1
+    }else{
+      bankroll = bankroll-bets
+      bets = bets
+      }
+    t=t+1
+    if(bankroll < bets){break}   #if too little $ to make a bet
+  }
+  duration = t
+  return(duration)
+}
+
+durations = numeric()
+it0 = 5000
+for(i in 1:it0)
+{
+  next0 = gambruin.2(100,900,18/38)
+  durations = c(durations,next0)
+}
+
+
+##A
+a1a=length(durations)
+b1a=length(which(durations<=100))
+prob1a=b1a/a1a
+prob1a
+
+##B
+a1b=length(durations)
+b1b=length(which(durations<=500))
+prob1b=b1b/a1b
+prob1b
+
+##C
+a1c=durations[which(durations<=5000)]
+mean1c=mean(a1c)
+mean1c
+
+##D
+set.seed(1)
+gambruin1<-function(bets,bankroll,prob)
+{
+  t=0
+  while(bets>0) {
+    pval=runif(1)
+    if(pval <= prob)
+    {
+      bankroll = bets + bankroll
+      bets = (bets + bankroll)*0.1
+    }else{
+      bankroll = bankroll-bets
+      bets = bets
+      }
+    t=t+1
+    if(t ==100){break}
+    if(bankroll<bets){break}
+  }
+  duration = t
+  return(bankroll)
+  
+}
+
+bankroll=numeric()
+it1 = 5000
+ for(i in 1:it1)
+{
+  next1 = gambruin1(100,900,18/38)
+  bankroll=c(bankroll,next1)
+  
+}
+mean(bankroll)
+var(bankroll)
+
+##E
+set.seed(1)
+gambruin2<-function(bets,bankroll,prob)
+{
+  t=0
+  while(bets>0) {
+    pval=runif(1)
+    if(pval <= prob)
+    {
+      bankroll = bets + bankroll
+      bets = (bets + bankroll)*0.1
+    }else{
+      bankroll = bankroll-bets
+      bets = bets
+      }
+    t=t+1
+    if(t ==500){break}
+    if(bankroll< bets){break}
+  }
+  duration = t
+  return(bankroll)
+  
+}
+
+bankroll=numeric()
+it2 = 5000
+for(i in 1:it2)
+{
+  next2 = gambruin2(100,900,18/38)
+  bankroll=c(bankroll,next2)
+}
+
+mean(bankroll)
+var(bankroll)
+```
+
 3. **Markov Chains**. Suppose you have a game where the probability of winning on your first hand is 48%; each time you win, that probability goes up by one percentage point for the next game (to a maximum of 100%, where it must stay), and each time you lose, it goes back down to 48%. Assume you cannot go bust and that the size of your wager is a constant $100.
     a. Is this a fair game? Simulate one hundred thousand sequential hands to determine the size of your return. Then repeat this simulation 99 more times to get a range of values to calculate the expectation.
-    b. Repeat this process but change the starting probability to a new value within 2% either way. Get the expected return after 100 repetitions. Keep exploring until you have a return value that is as fair as you can make it. Can you do this automatically?
-    c. Repeat again, keeping the initial probability at 48%, but this time change the probability increment to a value different from 1%. Get the expected return after 100 repetitions. Keep changing this value until you have a return value that is as fair as you can make it. 
-    
 
-2. **Markov Chains**. Suppose you have a game where the probability of winning on your first hand is 48%; each time you win, that probability goes up by one percentage point for the next game (to a maximum of 100%, where it must stay), and each time you lose, it goes back down to 48%. Assume you cannot go bust and that the size of your wager is a constant $100.
-    a. Is this a fair game? Simulate one hundred thousand sequential hands to determine the size of your return. Then repeat this simulation 99 more times to get a range of values to calculate the expectation.
 
 4. Creating a Bootstrap function. There is a particular concept called [bootstrapping]
 (https://en.wikipedia.org/wiki/Bootstrapping_(statistics)) where we can easily create 95% confidence intervals, even for complex estimators.
