--- a/Simulations-inclass-GOBrien.Rmd
+++ b/Simulations-inclass-GOBrien.Rmd
@@ -38,31 +38,31 @@ With this project we will simulate a famoues probability problem. This will not 
 
 ```{r}
 set.seed(1)
-gamble <- function(bet,bankroll,p){
+gamble <- function(bet,money,p){
     k=0
   while(bet>0) {
     ProbVal=runif(1)
     if(ProbVal <= p)
     {
-      bankroll = bet + bankroll
-      bet = (bet + bankroll)*0.1
+      money = bet + money
+      bet = (bet + money)*0.1
     }else{
-      bankroll = bankroll-bet
+      money = money-bet # if lost bet subtract
       bet = bet
       }
     k=k+1
-    if(bankroll < bet){break}
+    if(money < bet){break}
   }
-  duration = k
-  return(duration)
+  game = k
+  return(game)
 }
 
-durations = numeric()
+game = numeric() #game is number of hands/ number of bets placed. A vector. 
 s = 5000
 for(i in 1:s)
 {
   nextd = gamble(100,900,0.5)
-  durations = c(durations,nextd)
+  game = c(game,nextd)
 }
 
 game  <- rep(NA, N)
@@ -82,104 +82,233 @@ game[length(game)] tells us the last value. Use to check that the last hand is z
 ```
     a. the probability that you have "busted" (lost all your money) by the time you have placed your one hundredth bet. 
     ```{r}
-a=length(durations)
-b=length(which(durations<=100))
-prob=b/a
+a=length(game) # gives number of hands until bust
+b=length(which(game<=100)) # gives number of hands until bust where number of hands until bust is less than or equal to 100. 
+prob=b/a # divide b/a to get probability busted by 100th bet. Simple probability rules. 
 prob
     ```
     Probability that lost all money by 100th bet is 0.12.
     b. the probability that you have busted by the time you have placed your five hundredth bet by simulating the outcome directly. 
     ```{r}
-    a=length(durations)
-b=length(which(durations<=500))
+a=length(game) # similar reasoning from part A. 
+b=length(which(game<=500))
 prob=b/a
 prob
     ```
     Probability that lost all money by 500th bet is 0.477.
     c. the mean time you go bust, given that you go bust within the first 5000 hands.
     ```{r}
-    a=durations[which(durations<=5000)]
+a=game[which(game<=5000)] # similar reasoning from part A. 
 mean=mean(a)
 mean
     ```
     Mean time is 758 to bust given that you go bust within first 5000 hands. 
     d. the mean and variance of your bankroll after 100 hands (including busts).
     ```{r}
-    set.seed(1)
-GR1=function(bet,bankroll,p)
+set.seed(1)
+GR1=function(bet,money,p)
 {
   k=0
   while(bet>0) {
     ProbVal=runif(1)
     if(ProbVal <= p)
     {
-      bankroll = bet + bankroll
-      bet = (bet + bankroll)*0.1
+      money = bet + money
+      bet = (bet + money)*0.1
     }else{
-      bankroll = bankroll-bet
+      money = money-bet
       bet = bet
       }
-    k=k+1
+    k=k+1 # go to next Hand
     if(k ==100){break}
-    if(bankroll<bet){break}
+    if(money<bet){break}
   }
-  duration = k
-  return(bankroll)
+  game = k
+  return(money)
   
 }
 
-bankroll=numeric()
+money=numeric()
 s = 5000
 for(i in 1:s)
 {
   nextb = GR1(100,900,0.5)
-  bankroll=c(bankroll,nextb)
+  money=c(money,nextb)
 }
 
-mean(bankroll)
-var(bankroll)
+mean(money)
+var(money)
     ```
     Mean time is 879 with variance of 2716298.
     e. the mean and variance of your bankroll after 500 hands (including busts).
     ```{r}
     set.seed(1)
-GR2=function(bet,bankroll,p)
+GR2=function(bet,money,p)
 {
   k=0
   while(bet>0) {
     ProbVal=runif(1)
     if(ProbVal <= p)
     {
-      bankroll = bet + bankroll
-      bet = (bet + bankroll)*0.1
+      money = bet + money
+      bet = (bet + money)*0.1
     }else{
-      bankroll = bankroll-bet
+      money = money-bet
       bet = bet
       }
     k=k+1
     if(k ==500){break}
-    if(bankroll< bet){break}
+    if(money< bet){break}
   }
-  duration = k
-  return(bankroll)
+  game = k
+  return(money)
   
 }
 
-bankroll=numeric()
+money=numeric()
 s = 5000
 for(i in 1:s)
 {
   nextb = GR2(100,900,0.5)
-  bankroll=c(bankroll,nextb)
+  money=c(money,nextb)
 }
 
-mean(bankroll)
-var(bankroll)
+mean(money)
+var(money)
     ```
     Mean time of 536 with variance of 19437196.
 Note: you *must* stop playing if your player has gone bust. How will you handle this in the `for` loop?
 Add {break} statements.
-2. **Markov Chains**. Suppose you have a game where the probability of winning on your first hand is 48%; each time you win, that probability goes up by one percentage point for the next game (to a maximum of 100%, where it must stay), and each time you lose, it goes back down to 48%. Assume you cannot go bust and that the size of your wager is a constant $100.
+2. Repeat the previous problem with betting on black in American roulette, where the probability of winning on any spin is 18/38 for an even payout.
+```{r}
+set.seed(1)
+gamble2 <- function(bet,money,p){
+    k=0
+  while(bet>0) {
+    ProbVal=runif(1)
+    if(ProbVal <= p)
+    {
+      money = bet + money
+      bet = (bet + money)*0.1
+    }else{
+      money = money-bet # if lost bet subtract
+      bet = bet
+      }
+    k=k+1
+    if(money < bet){break}
+  }
+  game = k
+  return(game)
+}
+
+game = numeric() #game is number of hands/ number of bets placed. A vector. 
+s = 5000
+for(i in 1:s)
+{
+  nextd = gamble2(100,900,18/38)
+  game = c(game,nextd)
+}
+```
+    a. the probability that you have "busted" (lost all your money) by the time you have placed your one hundredth bet. 
+    ```{r}
+a=length(game) # gives number of hands until bust
+b=length(which(game<=100)) # gives number of hands until bust where number of hands until bust is less than or equal to 100. 
+prob=b/a # divide b/a to get probability busted by 100th bet. Simple probability rules. 
+prob
+    ```
+    Probability that lost all money by 100th bet is 0.1744.
+    b. the probability that you have busted by the time you have placed your five hundredth bet by simulating the outcome directly. 
+    ```{r}
+a=length(game) # similar reasoning from part A. 
+b=length(which(game<=500))
+prob=b/a
+prob
+    ```
+    Probability that lost all money by 500th bet is 0.6298.
+    c. the mean time you go bust, given that you go bust within the first 5000 hands.
+    ```{r}
+a=game[which(game<=5000)] # similar reasoning from part A. 
+mean=mean(a)
+mean
+    ```
+    Mean time is 504 to bust given that you go bust within first 5000 hands. 
+    d. the mean and variance of your bankroll after 100 hands (including busts).
+    ```{r}
+set.seed(1)
+GR1=function(bet,money,p)
+{
+  k=0
+  while(bet>0) {
+    ProbVal=runif(1)
+    if(ProbVal <= p)
+    {
+      money = bet + money
+      bet = (bet + money)*0.1
+    }else{
+      money = money-bet
+      bet = bet
+      }
+    k=k+1 # go to next Hand
+    if(k ==100){break}
+    if(money<bet){break}
+  }
+  game = k
+  return(money)
+  
+}
+
+money=numeric()
+s = 5000
+for(i in 1:s)
+{
+  nextb = GR1(100,900,18/38)
+  money=c(money,nextb)
+}
+
+mean(money)
+var(money)
+    ```
+    Mean time is 464 with variance of 864712.
+    e. the mean and variance of your bankroll after 500 hands (including busts).
+    ```{r}
+    set.seed(1)
+GR2=function(bet,money,p)
+{
+  k=0
+  while(bet>0) {
+    ProbVal=runif(1)
+    if(ProbVal <= p)
+    {
+      money = bet + money
+      bet = (bet + money)*0.1
+    }else{
+      money = money-bet
+      bet = bet
+      }
+    k=k+1
+    if(k ==500){break}
+    if(money< bet){break}
+  }
+  game = k
+  return(money)
+  
+}
+
+money=numeric()
+s = 5000
+for(i in 1:s)
+{
+  nextb = GR2(100,900,18/38)
+  money=c(money,nextb)
+}
+
+mean(money)
+var(money)
+    ```
+    Mean time of 31 with variance of 58251.
+
+
+3. **Markov Chains**. Suppose you have a game where the probability of winning on your first hand is 48%; each time you win, that probability goes up by one percentage point for the next game (to a maximum of 100%, where it must stay), and each time you lose, it goes back down to 48%. Assume you cannot go bust and that the size of your wager is a constant $100.
     a. Is this a fair game? Simulate one hundred thousand sequential hands to determine the size of your return. Then repeat this simulation 99 more times to get a range of values to calculate the expectation.
     ```{r}
     MC=function(bet,bankroll,p)
@@ -270,3 +399,28 @@ proportion=c(proportion,nextproportion)
 proportion
     ```
     0.035 probability increment allows for the proportion to return as 0.5, the fairest possible game. 
+    
+
+
+
+3. **Markov Chains**. Suppose you have a game where the probability of winning on your first hand is 48%; each time you win, that probability goes up by one percentage point for the next game (to a maximum of 100%, where it must stay), and each time you lose, it goes back down to 48%. Assume you cannot go bust and that the size of your wager is a constant $100.
+    a. Is this a fair game? Simulate one hundred thousand sequential hands to determine the size of your return. Then repeat this simulation 99 more times to get a range of values to calculate the expectation.
+    b. Repeat this process but change the starting probability to a new value within 2% either way. Get the expected return after 100 repetitions. Keep exploring until you have a return value that is as fair as you can make it. Can you do this automatically?
+    c. Repeat again, keeping the initial probability at 48%, but this time change the probability increment to a value different from 1%. Get the expected return after 100 repetitions. Keep changing this value until you have a return value that is as fair as you can make it. 
+
+
+4. Creating a Bootstrap function. There is a particular concept called [bootstrapping]
+(https://en.wikipedia.org/wiki/Bootstrapping_(statistics)) where we can easily create 95% confidence intervals, even for complex estimators.
+
+The steps of this process are:
+
+  a. Draw a sample, with replacement, from your data which is the same length of your data.
+  b. Calculate the statistic of interest on this boostrap sample (ie mean, variance, regression,...)
+  c. Peform steps 1:2 at least 1000 times over until you have a vector of your statistics. 
+  d. The lower bound of a 95% CI will be the 0.025 percentile
+  e. The upper bound of a 95% CI will be the 0.975 percentile
+
+Make a function called `boot_ci` which calculates the 95% confidence interval in this manner. 
+
+5. For problems 3b and 3c, you calculated a mean value. Because you saved these final results in a vector, use the bootstrap to estimate the variance of the return in each case for your final answer. Once you have these results, which game has the smaller variance in returns?
+    
