--- a/Simulations-InClass-Gately.Rmd
+++ b/Simulations-InClass-Gately.Rmd
@@ -32,6 +32,7 @@ Since you all have completed problem 1, you first step will be to work through e
  1. **Gambler's Ruin**: Suppose you have a bankroll of $1000 and make bets of $100 on a fair game. By simulating the outcome directly for at most 5000 iterations of the game (or hands), estimate:
  
     a. the probability that you have "busted" (lost all your money) by the time you have placed your one hundredth bet. 
+    
 ```{r}
 set.seed(1)
 gambler1=function(bet,bankroll,prob) {
@@ -162,12 +163,136 @@ var(bankroll)
 ```
 The mean of the bankroll after 500 hands is 536 and the variance is 19437196. 
  
- 
 Note: you *must* stop playing if your player has gone bust. How will you handle this in the `for` loop?
 
 2. Repeat the previous problem with betting on black in American roulette, where the probability of winning on any spin is 18/38 for an even payout.
 
+a. 
+```{r}
+set.seed(1)
+roulette=function(bet,bankroll,prob) {
+  b=0   #Hand=0
+  while(bet>0) {
+    ProbVal=runif(1) #generates a single normal random number
+    if(ProbVal <= prob) {
+      bankroll = bet + bankroll
+      bet = (bet + bankroll)*0.1
+    } else {
+      bankroll = bankroll-bet
+      bet = bet
+      }
+    b=b+1
+    if(bankroll < bet) {
+      break
+      }
+  }
+  duration = b
+  return(duration)
+}
+dura = numeric()
+s = 5000
+for(i in 1:s) {
+  dice = roulette(100,900,0.474) #changed the probability to 18/38 = 0.474
+  dura = c(dura,dice) #Creating a vector of durations and dice 
+}
 
+dur1=length(dura)
+bust1=length(which(dura<=100))
+bust1/dur1
+```
+The probability that you have "busted" by the time you placed your 100th bet is 0.174.
+
+b. 
+```{r}
+dur2=length(dura)
+bust2=length(which(dura<=500))
+bust2/dur2
+```
+The probability that you have "busted" by the time you placed your 500th bet is 0.628.
+
+c.
+```{r}
+mean_bust=dura[which(dura<=5000)]
+mean(mean_bust)
+```
+The mean time you go bust within the first 5000 hands is 507. 
+
+d.
+```{r}
+set.seed(1)
+roulette2=function(bet,bankroll,prob) {
+  b=0
+  while(bet>0) {
+    ProbVal=runif(1)
+    if(ProbVal <= prob) {
+      bankroll = bet + bankroll
+      bet = (bet + bankroll)*0.1
+    } else {
+      bankroll = bankroll-bet
+      bet = bet
+      }
+    b=b+1
+    if(b ==100) {
+      break 
+      }
+    if(bankroll<bet){ 
+      break
+      }
+  }
+  duration = b
+  return(bankroll)
+}
+
+bankroll=numeric()
+s = 5000
+for(i in 1:s) {
+  dur3 = roulette(100,900,0.474)
+  bankroll=c(bankroll,dur3)
+}
+
+mean(bankroll)
+var(bankroll)
+```
+The mean of the bankroll after 100 hands is 507 and the variance is 256115. 
+
+e.
+```{r}
+set.seed(1)
+roulette3=function(bet,bankroll,prob) {
+  b=0
+  while(bet>0) {
+    ProbVal=runif(1)
+    if(ProbVal <= prob) {
+      bankroll = bet + bankroll
+      bet = (bet + bankroll)*0.1
+    } else {
+      bankroll = bankroll-bet
+      bet = bet
+      }
+    b=b+1
+    if(b ==500) {
+      break
+      }
+    if(bankroll< bet) {
+      break
+      }
+  }
+  duration = b
+  return(bankroll)
+}
+
+bankroll=numeric()
+s = 5000
+for(i in 1:s)
+{
+  dur4 = roulette3(100,900,0.474)
+  bankroll=c(bankroll,dur4)
+}
+
+mean(bankroll)
+var(bankroll)
+```
+The mean of the bankroll after 100 hands is 32.2 and the variance is 59837. 
 
 3. **Markov Chains**. Suppose you have a game where the probability of winning on your first hand is 48%; each time you win, that probability goes up by one percentage point for the next game (to a maximum of 100%, where it must stay), and each time you lose, it goes back down to 48%. Assume you cannot go bust and that the size of your wager is a constant $100.
     
