--- a/Simulations-inclass-GOBrien.Rmd
+++ b/Simulations-inclass-GOBrien.Rmd
@@ -179,8 +179,11 @@ var(money)
     Mean time of 536 with variance of 19437196.
 Note: you *must* stop playing if your player has gone bust. How will you handle this in the `for` loop?
 Add {break} statements.
+
 2. Repeat the previous problem with betting on black in American roulette, where the probability of winning on any spin is 18/38 for an even payout.
+
 ```{r}
+# I copied the code I made for question 1 and just changed the probability to 18/38 instead of 0.5000000. :)
 set.seed(1)
 gamble2 <- function(bet,money,p){
     k=0
@@ -344,7 +347,8 @@ mean(size)
     Mean size is zero. This is not a fair game. 
     b. Repeat this process but change the starting probability to a new value within 2% either way. Get the expected return after 100 repetitions. Keep exploring until you have a return value that is as fair as you can make it. Can you do this automatically?
     ```{r}
-    set.seed(1)
+    # Trying with 0.46
+set.seed(1)
 proportion=numeric()
 for (j in 1:20){
   size=numeric()
@@ -352,6 +356,21 @@ for (j in 1:20){
 for(i in 1:s)
 {
   nextb = MC(100,900,0.46+0.002*j)
+  size = c(size,nextb)
+}
+  nextproportion=length(which(size==0))/100
+  proportion=c(proportion,nextproportion)
+}
+proportion
+    # Trying with 0.485
+set.seed(1)
+proportion=numeric()
+for (j in 1:20){
+  size=numeric()
+  s = 100
+for(i in 1:s)
+{
+  nextb = MC(100,900,0.485+0.002*j)
   size = c(size,nextb)
 }
   nextproportion=length(which(size==0))/100
@@ -401,26 +420,39 @@ proportion
     0.035 probability increment allows for the proportion to return as 0.5, the fairest possible game. 
     
 
-
-
-3. **Markov Chains**. Suppose you have a game where the probability of winning on your first hand is 48%; each time you win, that probability goes up by one percentage point for the next game (to a maximum of 100%, where it must stay), and each time you lose, it goes back down to 48%. Assume you cannot go bust and that the size of your wager is a constant $100.
-    a. Is this a fair game? Simulate one hundred thousand sequential hands to determine the size of your return. Then repeat this simulation 99 more times to get a range of values to calculate the expectation.
-    b. Repeat this process but change the starting probability to a new value within 2% either way. Get the expected return after 100 repetitions. Keep exploring until you have a return value that is as fair as you can make it. Can you do this automatically?
-    c. Repeat again, keeping the initial probability at 48%, but this time change the probability increment to a value different from 1%. Get the expected return after 100 repetitions. Keep changing this value until you have a return value that is as fair as you can make it. 
-
-
 4. Creating a Bootstrap function. There is a particular concept called [bootstrapping]
 (https://en.wikipedia.org/wiki/Bootstrapping_(statistics)) where we can easily create 95% confidence intervals, even for complex estimators.
 
 The steps of this process are:
 
   a. Draw a sample, with replacement, from your data which is the same length of your data.
+```{r}
+samp <- sample(10, replace = TRUE)
+```
   b. Calculate the statistic of interest on this boostrap sample (ie mean, variance, regression,...)
+```{r}
+mean(samp)
+var(samp)
+```
   c. Peform steps 1:2 at least 1000 times over until you have a vector of your statistics. 
+```{r}
+meann <- function(data, num) {
+    resamples <- lapply(1:num, function(i) sample(data, replace=T)) # why function(i)?? 
+    r.mean <- sapply(resamples, mean)
+    r.var <- sapply(resamples, var)
+    std.err <- sqrt(var(r.mean))
+    list(var = r.var, std.err=std.err, resamples=resamples, mean=r.mean)   
+}
+meann(samp, 10)
+
+```
   d. The lower bound of a 95% CI will be the 0.025 percentile
   e. The upper bound of a 95% CI will be the 0.975 percentile
 
 Make a function called `boot_ci` which calculates the 95% confidence interval in this manner. 
 
 5. For problems 3b and 3c, you calculated a mean value. Because you saved these final results in a vector, use the bootstrap to estimate the variance of the return in each case for your final answer. Once you have these results, which game has the smaller variance in returns?
+```{r}
+
+```
     
