--- a/Simulations-InClass-Gately.Rmd
+++ b/Simulations-InClass-Gately.Rmd
@@ -1,5 +1,4 @@
-Katie Gately 
-
+Arielle Childs, Gracie OBrien, and Katie Gately 
 ---
 title: "Simulations In-Class Project"
 date: "Due October 13, 2017 at 11:59pm"
@@ -40,14 +39,14 @@ gambler1=function(bet,bankroll,prob) {
   while(bet>0) {
     ProbVal=runif(1) #generates a single normal random number
     if(ProbVal <= prob) {
-      bankroll = bet + bankroll
+      bankroll = bet + bankroll 
       bet = (bet + bankroll)*0.1
     } else {
       bankroll = bankroll-bet
       bet = bet
       }
     b=b+1
-    if(bankroll < bet) {
+    if(bankroll < bet) { #if no money to make a bet, then break
       break
       }
   }
@@ -347,7 +346,7 @@ for(i in 1:s)
 }
 proportion1 #when the proportion is at 0.5, it is most fair
 ``` 
-The return value is most fair at 0.46. 
+The probability increment is most fair at a value of 0.05. 
 
    c. Repeat again, keeping the initial probability at 48%, but this time change the probability increment to a value different from 1%. Get the expected return after 100 repetitions. Keep changing this value until you have a return value that is as fair as you can make it. 
 
@@ -388,6 +387,7 @@ proportion2=c(proportion2,nextproportion)
 }
 proportion2 #when the proportion is at 0.5, it is most fair
 ```
+The probability increment is most fair at a value of 0.034.
 
 4. Creating a Bootstrap function. There is a particular concept called [bootstrapping]
 (https://en.wikipedia.org/wiki/Bootstrapping_(statistics)) where we can easily create 95% confidence intervals, even for complex estimators.
@@ -425,10 +425,4 @@ boot<-sapply(boot_ci(data,1000), conf_int)
 
 
 5. For problems 3b and 3c, you calculated a mean value. Because you saved these final results in a vector, use the bootstrap to estimate the variance of the return in each case for your final answer. Once you have these results, which game has the smaller variance in returns?
-
-```{r}
-boot_ci(proportion1,100)
-boot_ci(proportion2,100)
-```
-
 
